--- a/public/html/home.html
+++ b/public/html/home.html
@@ -10,9 +10,6 @@
 </head>
 
 <body>
-    <h3 id="title"></h3>
-    <p id="message"></p>
-
     <div class="container">
         <div class="row">
             <div id="chat-window" class="col-lg-12 bas box">
@@ -27,11 +24,16 @@
             </div>
         </div>
     </div>
-
     <script src="/javascripts/jquery-1.10.2.min.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
     <script src="/javascripts/socket.io.min.js"></script>
+    <script src="/javascripts/application.js"></script>
     <script>
+    $(document).ready(function() {
+        var chatInstance = new window.LKD.ChatApp();
+        chatInstance.init();
+        console.log(chatInstance.nickName);
+    });
     </script>
 </body>
 
