--- a/public/html/home.html
+++ b/public/html/home.html
@@ -12,29 +12,31 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
-                <h3 id="user-name"></h3>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-md-12 col-sm-12 col-xs-12">
+                <h3>Hello <b class="bold" id="user-name">Demo User</b>!</h3>
             </div>
         </div>
         <div id="chat-window" class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-md-12 col-sm-12 col-xs-12">
                 <table class="table table-hover mts">
                     <tbody id="chat-container">
                         <tr>
-                            <td class="col-lg-1 text-right chat-row"><b class="right">Socket.io :</b>
+                            <td class="col-lg-1 col-md-1 col-sm-3 col-xs-3 text-right chat-row"><b class="right">Admin :</b>
                             </td>
-                            <td class="col-lg-11 text-left">start chatting...</td>
+                            <td class="col-lg-11 col-md-11 col-sm-9 col-xs-9 text-left">Welcome! Start chatting...</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
         </div>
         <div class="row mtl">
-            <div class="col-lg-10">
-                <input type="text" class="form-control" id="txt-message">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <textarea name="message" class="form-control" id="txt-message" cols="30" rows="4"></textarea>
             </div>
-            <div class="col-lg-2">
-                <button id="btn-post" class="btn btn-primary col-lg-12">Send Message!</button>
+        </div>
+        <div class="row mts">
+            <div class="col-lg-offset-8 col-lg-4 col-md-offset-8 col-md-4 col-sm-offset-6 col-sm-6 col-xs-offset-4 col-xs-8">
+                <button id="btn-post" class="btn btn-success col-lg-12 col-md-12 col-sm-12 col-xs-12">Send Message!</button>
             </div>
         </div>
     </div>
