--- a/public/html/home.html
+++ b/public/html/home.html
@@ -35,7 +35,8 @@
             </div>
         </div>
         <div class="row mts">
-            <div class="col-lg-offset-8 col-lg-4 col-md-offset-8 col-md-4 col-sm-offset-6 col-sm-6 col-xs-offset-4 col-xs-8">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right">press enter to send message</div>
+            <div class="hidden col-lg-offset-8 col-lg-4 col-md-offset-8 col-md-4 col-sm-offset-6 col-sm-6 col-xs-offset-4 col-xs-8">
                 <button id="btn-post" class="btn btn-success col-lg-12 col-md-12 col-sm-12 col-xs-12">Send Message!</button>
             </div>
         </div>
@@ -43,13 +44,13 @@
     <script src="/javascripts/socket.io.min.js"></script>
     <script src="/javascripts/jquery-1.10.2.min.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="/javascripts/jquery.emoticons.js"></script>
     <script src="/javascripts/jquery.slimscroll.min.js"></script>
     <script src="/javascripts/application.js"></script>
     <script>
     $(document).ready(function() {
         var chatInstance = new window.LKD.ChatApp();
         chatInstance.init();
-        console.log(chatInstance.nickName);
     });
     </script>
 </body>
