--- a/public/html/home.html
+++ b/public/html/home.html
@@ -35,7 +35,8 @@
             </div>
         </div>
         <div class="row mts">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right">press enter to send message</div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right"><b>press enter to send message</b>
+            </div>
             <div class="hidden col-lg-offset-8 col-lg-4 col-md-offset-8 col-md-4 col-sm-offset-6 col-sm-6 col-xs-offset-4 col-xs-8">
                 <button id="btn-post" class="btn btn-success col-lg-12 col-md-12 col-sm-12 col-xs-12">Send Message!</button>
             </div>
