--- a/public/html/home.html
+++ b/public/html/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Socket.io</title>
     <link rel="stylesheet" href="/stylesheets/bootstrap.css">
     <link rel="stylesheet" href="/stylesheets/jquery-ui.min.css">
@@ -16,9 +16,9 @@
                 <h3>Hello <b class="bold" id="user-name">Demo User</b>!</h3>
             </div>
         </div>
-        <div id="chat-window" class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-md-12 col-sm-12 col-xs-12">
-                <table class="table table-hover mts">
+        <div class="row bts1">
+            <div id="chat-window" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-md-12 col-sm-12 col-xs-12">
+                <table class="table table-hover">
                     <tbody id="chat-container">
                         <tr>
                             <td class="col-lg-1 col-md-1 col-sm-3 col-xs-3 text-right chat-row"><b class="right">Admin :</b>
@@ -30,6 +30,9 @@
             </div>
         </div>
         <div class="row mtl">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right">
+                <button class="btn btn-link" id="btn-clear-chat">clear chat</button>
+            </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <textarea name="message" class="form-control" id="txt-message" cols="30" rows="4"></textarea>
             </div>
