--- a/public/html/home.html
+++ b/public/html/home.html
@@ -12,12 +12,16 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-md-12 col-sm-12 col-xs-12">
-                <h3>Hello <b class="bold" id="user-name">Demo User</b>!</h3>
+            <div class="col-lg-11 col-md-10 col-sm-10 col-xs-9">
+                <h3>Hello <b class="bold" id="user-name"></b>!</h3>
+            </div>
+            <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
+                <button class="mtm btn btn-warning hidden col-lg-12 col-md-offset-6 col-md-6 col-sm-8 col-xs-12 right" id="logout">Logout</button>
+                <button class="mtm btn btn-primary hidden col-lg-12 col-md-6 col-sm-8 col-xs-12 right" id="login">Login</button>
             </div>
         </div>
         <div class="row bts1">
-            <div id="chat-window" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 col-md-12 col-sm-12 col-xs-12">
+            <div id="chat-window" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <table class="table table-hover">
                     <tbody id="chat-container">
                         <tr>
@@ -47,14 +51,14 @@
     </div>
     <script src="/javascripts/socket.io.min.js"></script>
     <script src="/javascripts/jquery-1.10.2.min.js"></script>
+    <script src="/javascripts/jquery.cookie.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
     <script src="/javascripts/jquery.emoticons.js"></script>
     <script src="/javascripts/jquery.slimscroll.min.js"></script>
     <script src="/javascripts/application.js"></script>
     <script>
     $(document).ready(function() {
-        var chatInstance = new window.LKD.ChatApp();
-        chatInstance.init();
+        $('#chat-window').ChatApp();
     });
     </script>
 </body>
