--- a/public/html/home.html
+++ b/public/html/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <title>Socket.io</title>
     <link rel="stylesheet" href="/stylesheets/bootstrap.css">
     <link rel="stylesheet" href="/stylesheets/jquery-ui.min.css">
@@ -10,47 +10,63 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container socket-chat">
         <div class="row">
-            <div class="col-lg-11 col-md-10 col-sm-10 col-xs-9">
-                <h3>Hello <b class="bold" id="user-name"></b>!</h3>
-            </div>
-            <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
-                <button class="mtm btn btn-warning hidden col-lg-12 col-md-offset-6 col-md-6 col-sm-8 col-xs-12 right" id="logout">Logout</button>
-                <button class="mtm btn btn-primary hidden col-lg-12 col-md-6 col-sm-8 col-xs-12 right" id="login">Login</button>
-            </div>
-        </div>
-        <div class="row bts1">
-            <div id="chat-window" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <table class="table table-hover">
-                    <tbody id="chat-container">
-                        <tr>
-                            <td class="col-lg-1 col-md-1 col-sm-3 col-xs-3 text-right chat-row"><b class="right">Admin :</b>
-                            </td>
-                            <td class="col-lg-11 col-md-11 col-sm-9 col-xs-9 text-left">Welcome! Start chatting...</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row mtl">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right">
-                <button class="btn btn-link" id="btn-clear-chat">clear chat</button>
-            </div>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <textarea name="message" class="form-control" id="txt-message" cols="30" rows="4"></textarea>
-            </div>
-        </div>
-        <div class="row mts">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-right"><b>press enter to send message</b>
-            </div>
-            <div class="hidden col-lg-offset-8 col-lg-4 col-md-offset-8 col-md-4 col-sm-offset-6 col-sm-6 col-xs-offset-4 col-xs-8">
-                <button id="btn-post" class="btn btn-success col-lg-12 col-md-12 col-sm-12 col-xs-12">Send Message!</button>
+            <div class="col-lg-12">
+                <div class="row dropdown-handler">
+                    <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
+                        <h3><b class="bold" id="user-name"></b>!</h3>
+                    </div>
+                    <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
+                        <div class="dropdown mtm ">
+                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+                                Options
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                                <li role="presentation">
+                                    <button role="menuitem" tabindex="-1" class="btn btn-link" id="login">Login</button>
+                                    <button role="menuitem" tabindex="-1" class="btn btn-link" id="logout">Logout</button>
+                                </li>
+                                <li role="presentation">
+                                    <button role="menuitem" tabindex="-1" class="btn btn-link" id="collapse">Minimize</button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="row collapse-row bts1">
+                    <div id="chat-window" class="col-lg-12">
+                        <table class="table table-hover">
+                            <tbody id="chat-container">
+                                <tr>
+                                    <td class="col-lg-3 text-right chat-row"><b class="right">App</b>
+                                    </td>
+                                    <td class="col-lg-9 text-left">Welcome! Start chatting...</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="row collapse-row mtl">
+                    <div class="col-lg-12 text-right">
+                        <button class="btn btn-link" id="btn-clear-chat">clear chat</button>
+                    </div>
+                    <div class="col-lg-12">
+                        <textarea name="message" class="form-control" id="txt-message" cols="30" rows="4"></textarea>
+                    </div>
+                </div>
+                <div class="row collapse-row mts">
+                    <div class="col-lg-12 text-right"><b>press enter to send message</b>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
     <script src="/javascripts/socket.io.min.js"></script>
     <script src="/javascripts/jquery-1.10.2.min.js"></script>
+    <script src="/javascripts/jquery-ui.min.js"></script>
     <script src="/javascripts/jquery.cookie.js"></script>
     <script src="/javascripts/bootstrap.min.js"></script>
     <script src="/javascripts/jquery.emoticons.js"></script>
